some execution error fixes