@@ -17,12 +17,11 @@ repositories {
 
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
     implementation fileTree(dir: 'src/main/lib', include: ['*.jar'])
-    compile group: 'de.unisb.cs.st', name: 'sequitur', version: '1.0'
-    compile "de.unisb.cs.st:sequitur:1.0"
+    implementation "de.unisb.cs.st:sequitur:1.0"
     // https://mvnrepository.com/artifact/jfree/jfreechart
-    compile group: 'jfree', name: 'jfreechart', version: '1.0.12'
+    implementation group: 'jfree', name: 'jfreechart', version: '1.0.12'
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
@@ -30,8 +29,13 @@ intellij {
     version '2020.1'
     plugins = ['java', 'coverage', 'junit', 'testng']
 }
+
 patchPluginXml {
     changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
+      prototype implementation.<br>
+      <em>added a bunch of stuff</em>"""
+}
+
+runIde {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
 }
